Tue Oct 13 2009   "Patrick Näf" <herzbube@herzbube.ch>
- [doc] updated project blurb in README

Sat Oct 10 2009   "Patrick Näf" <herzbube@herzbube.ch>
- [project] registered project at the cheeese shop
- [project] released version 0.1
- [doc] final doc changes for release of version 0.1

Fri Oct 09 2009   "Patrick Näf" <herzbube@herzbube.ch>
- [bugfix] Unit test fails on Debian [#72]
- [build] added release helper script build-and-test.sh
- [doc] finished writing ReleaseSteps

Tue Oct 07 2009   "Patrick Näf" <herzbube@herzbube.ch>
- [project] added classifiers to setup.py meta-data
- [doc] finished writing documents README, INSTALL and ReleaseSteps
- [doc] added Roadmap document
- [test] implemented unit tests

Tue Oct 06 2009   "Patrick Näf" <herzbube@herzbube.ch>
- [test] added "test" command to setup.py
- [test] added unit test modules with dummy implementations
- [build] added build configurations for a couple of different platforms to
  setup.py
- [project] changed project folder structure (added doc and src folders)
- [build] extension is now built by default into src/packages/aprmd5.so

Sat Jun 20 2009   "Patrick Näf" <herzbube@herzbube.ch>
- rewrite of project description in README + setup.py

Tue Jun 16 2009   "Patrick Näf" <herzbube@herzbube.ch>
- implement remaining functions

Sun Jun 14 2009   "Patrick Näf" <herzbube@herzbube.ch>
- write a version of aprmd5.c for Python 2.6

Thu Jun 04 2009   "Patrick Näf" <herzbube@herzbube.ch>
- initial project structure
- prototype implementations that wrap apr_md5() and apr_md5_encode()